@@ -48,4 +48,6 @@ define("_AM_CBBOTTOM","Center Block - Bottom");
 
 define("_AM_EDPERM","Can use the WYSIWYG editor in the following modules");
 define("_AM_DEBUG_PERM","The Debug Mode is enabled for the next modules");
+define("_AM_GROUPMANAGER_PERM","Group Manager rights");
+
 ?>
